day-08-rds-managed-credentials/main.tf
#================RDS====================#

resource "aws_db_instance" "rds" {
  allocated_storage       = 10
   identifier             = "rds"
  db_name                 = "mydb"
  engine                  = "mysql"
  engine_version          = "8.0"
  instance_class          = "db.t3.micro"
  manage_master_user_password = true                        #rds and secret manager manage this password
  username                    = "admin"

  db_subnet_group_name    = aws_db_subnet_group.sub-grp.id

  parameter_group_name    = "default.mysql8.0"
  backup_retention_period  = 7                              # Retain backups for 7 days
  backup_window            = "02:00-03:00"                  # Daily backup window (UTC)

 # Enable performance insights
 #   performance_insights_enabled          = true
 #   performance_insights_retention_period = 7              # Retain insights for 7 days
  maintenance_window = "sun:04:00-sun:05:00"                # Maintenance every Sunday (UTC)
  deletion_protection = false
  skip_final_snapshot = true
  vpc_security_group_ids  = [aws_security_group.rds_sg.id]  #security-group
  depends_on = [ aws_db_subnet_group.sub-grp ]           
 
}

#================VpC=========================#

resource "aws_vpc" "name" {
    cidr_block = "10.0.0.0/16"
    tags = {
      Name = "rds-vpc"
    }
  
}

#===============SUBNET=================#

resource "aws_subnet" "subnet-1" {
    vpc_id = aws_vpc.name.id
    cidr_block = "10.0.0.0/24"
    availability_zone = "us-east-1a"
    tags = {
      Name="sub-1"
    }

  
}
resource "aws_subnet" "subnet-2" {
    vpc_id = aws_vpc.name.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1b"
    tags = {
      Name= "sub-2"
    }
  
}

#============DATA-SOURCE=============#
        #use collect data fro AWS

data "aws_subnet" "subnet-1" {
    filter {
    name   = "tag:Name"
    values = ["sub-1"]
    
  }
  depends_on = [ aws_subnet.subnet-1 ]
  
}
data "aws_subnet" "subnet-2" {
    filter {
    name   = "tag:Name"
    values = ["sub-2"]
    
  }
  depends_on = [ aws_subnet.subnet-2 ]
  
}


#=============Subnet-group==============#

resource "aws_db_subnet_group" "sub-grp" {
  name       = "subnet-group"                   #subnet-group--name
  subnet_ids = [aws_subnet.subnet-1.id, aws_subnet.subnet-2.id]

  tags = {
    Name = "My DB subnet group"
  }
}

#----------------Security-group-----------------#

resource "aws_security_group" "rds_sg" {
  name        = "rds-sg"
  description = "Allow MySQL inbound traffic"
  vpc_id      = aws_vpc.name.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] 
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "rds-sg"
  }
}
